--- a/app/views/menus/teacher/_qz-main.html.haml
+++ b/app/views/menus/teacher/_qz-main.html.haml
@@ -3,6 +3,6 @@
 
 %ul#teacher-quiz.dropdown-menu.pull-right{ :role => :menu }
   %li
-    = simple_link :for => "New", :id => "lnk-new-quiz"
+    = simple_link :for => "New", :id => "lnk-new-quiz", :icon => 'icon-wrench'
   %li
-    = simple_link :for => "List", :id => 'lnk-existing-quiz'
+    = simple_link :for => "List", :id => 'lnk-existing-quiz', :icon => 'icon-list'
