--- a/app/assets/stylesheets/bootstrap-overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap-overrides.css.scss
@@ -54,6 +54,7 @@ $green: #347235 ; // rgb(87,188,32)
   > li {
     > a { 
       font-size: 11px ;
+      font-weight: 300 ;
     } 
     > .description { 
       color: red ;
