--- a/app/views/menus/teacher/_howto.html.haml
+++ b/app/views/menus/teacher/_howto.html.haml
@@ -3,25 +3,25 @@
   %li
     = simple_link :for => "Make a Quiz", :id => 'help-make-a-quiz', 
       :class => 'help-launcher', :launch => 'qzb-milestone-1',
-      :autoclick => 'lnk-existing-quiz'
+      :autoclick => 'lnk-existing-quiz', :icon => 'icon-wrench'
   %li
     = simple_link :for => "Make a Worksheet", :id => 'help-make-a-ws', 
       :class => 'help-launcher', :launch => 'wsb-milestone-1',
-      :autoclick => 'lnk-existing-quiz'
+      :autoclick => 'lnk-existing-quiz', :icon => 'icon-wrench'
   %li
     = simple_link :for => "Edit an existing quiz", :id => 'help-edit-quiz',
       :class => 'help-launcher', :launch => 'editqz-milestone-1',
-      :autoclick => 'lnk-existing-quiz'
+      :autoclick => 'lnk-existing-quiz', :icon => 'icon-pencil'
   %li
     = simple_link :for => "Publish a worksheet", :id => 'help-publish-ws',
       :class => 'help-launcher', :launch => 'publish-milestone-1',
-      :autoclick => 'lnk-existing-quiz'
+      :autoclick => 'lnk-existing-quiz', :icon => 'icon-share'
   %li
-    = simple_link :for => "Manage Study Groups", :id => 'help-mng-sektion',
-      :class => 'help-launcher', :launch => 'mng-sektions-milestone-1'
+    = simple_link :for => "Add/Edit Study Groups", :id => 'help-mng-sektion',
+      :class => 'help-launcher', :launch => 'mng-sektions-milestone-1', :icon => 'icon-pencil'
   %li
-    = simple_link :for => "Upload Scans", :id => 'help-upload-scans',
-      :class => 'help-launcher', :launch => 'upload-scans-milestone-1'
+    = simple_link :for => "Send Scans for Grading", :id => 'help-upload-scans',
+      :class => 'help-launcher', :launch => 'upload-scans-milestone-1', :icon => 'icon-share'
 -#
   %li
     = simple_link :for => "Make a Worksheet", :id => 'help-make-a-ws', 
