--- a/app/views/menus/teacher/_workbench.html.haml
+++ b/app/views/menus/teacher/_workbench.html.haml
@@ -1,13 +1,15 @@
 
 %ul.dropdown-menu.dropdown-inverse#teacher-workbench{ :role => :menu }
   %li
-    = simple_link :for => "Grade Worksheets", :id => 'lnk-wb-pending'
+    = simple_link :for => "Grade Worksheets", :id => 'lnk-wb-pending', :icon => 'icon-pencil'
   %li
-    = simple_link :for => "Suggest Question(s)", :id => 'lnk-upload-suggestion', :href => "#m-suggestion-upload"
+    = simple_link :for => "Suggest Question(s)", :id => 'lnk-upload-suggestion', 
+    :href => "#m-suggestion-upload", :icon => 'icon-arrow-up'
   %li
-    = simple_link :for => "Add/Edit Study Groups", :id => 'lnk-mng-sektions'
+    = simple_link :for => "Add/Edit Study Groups", :id => 'lnk-mng-sektions', :icon => 'icon-pencil'
   %li
-    = simple_link :for => 'Download Scanbot (Windows only)', :href => "#{server}/winbot/app.publish/winbot.application"
+    = simple_link :for => 'Download Scanbot (Windows only)', :icon => 'icon-arrow-down',
+    :href => "#{server}/winbot/app.publish/winbot.application"
     %p.footnote
       You will need this application to send scans to Gradians.com
 -#
