icons added for logout / edit account links

--- a/app/views/menus/user/_account.html.haml
+++ b/app/views/menus/user/_account.html.haml
@@ -1,7 +1,7 @@
 
 %ul#tasks-on-account.dropdown-menu{ :role => :menu }
   %li
-    = simple_link :for => "Logout", :id => 'lnk-logout', :href => logout_path
+    = simple_link :for => "Logout", :id => 'lnk-logout', :href => logout_path, :icon => 'icon-off'
   %li
-    = simple_link :for => "Edit Account Details", :href => '#m-edit-account', :id => 'lnk-edit-account'
+    = simple_link :for => "Edit Account Details", :href => '#m-edit-account', :id => 'lnk-edit-account', :icon => 'icon-pencil'
 
