Minor edits to tutorials

--- a/app/views/teachers/_wsb-sektions.html.haml
+++ b/app/views/teachers/_wsb-sektions.html.haml
@@ -13,7 +13,7 @@
     :html => { :class => 'multi-select', 'data-action' => "#{quiz_assign_path}?id=:id", 'data-id' => 'tab-wsb-quizzes'} do |f|
       .btn-toolbar.purge-skip
         .btn-group
-          = simple_button :icon => 'icon-align-justify', :id => 'select-all-for-quiz',
+          = simple_button :icon => 'icon-list', :id => 'select-all-for-quiz',
             :tooltip => "Select All", :placement => :right
           -#= simple_button :icon => 'icon-envelope', :id => 'btn-publish-ws', :toggle => :button,
             :tooltip => "Send PDFs to students", :class => 'btn-primary', :placement => :right
