--- a/app/views/tutorials/teacher/qzb/_three.html.haml
+++ b/app/views/tutorials/teacher/qzb/_three.html.haml
@@ -4,9 +4,10 @@
     %h6= "#2"
     %p
       Pick the <b>topics</b> you would like to see questions on. 
-      Topics are <b>grouped by</b> the broad areas of study - or <b>verticals</b>
+      Topics are <b>grouped by</b> broad areas of study - or <b>verticals</b>
     %p
       You can pick any topic in any vertical for your quiz. For example, you could 
       pick one topic from Probability and two from Trigonometry
     %p
+      <b>Click on a topic to select it</b>. 
       When you are done picking topics, click the <b>Show Questions</b> button above
