--- a/app/views/tutorials/teacher/wsb/_three.html.haml
+++ b/app/views/tutorials/teacher/wsb/_three.html.haml
@@ -1,11 +1,16 @@
 
 %ol.hide{ :id => 'wsb-milestone-3', :data => { :onwards => :true }}
   %li{ :data => { :id => 'wsb-div-milestone-3' } }
+    %h6= "#2"
+    %p
+      Next <b>pick students</b> for whom the worksheet is to be made
+    %p
+      Students are listed by the section / study-group they are part of. 
+      Select a section and then select students. To <b>select all</b> students 
+      in a section, press <i class='icon-list'></i>
+  %li{ :data => { :id => 'build-worksheet', :options => 'tipLocation:top;nubPosition:bottom' } }
     %h6= "#3"
     %p
-      These are the students in the selected section. Pick the ones you'd 
-      like to make a worksheet for
-  %li{ :data => { :id => 'build-worksheet', :options => 'tipLocation:top;nubPosition:bottom' } }
-    %h6= "#4"
+      When you are done, click the <b>Make PDF</b> <i class='icon-wrench'></i> button
     %p
-      And when you're done picking, click this button to start making the worksheet 
+      That's it! Your worksheet will be ready in a bit
