--- a/app/views/tutorials/teacher/wsb/_one.html.haml
+++ b/app/views/tutorials/teacher/wsb/_one.html.haml
@@ -8,4 +8,5 @@
       If you see nothing here, then you haven't made a quiz yet. 
       Please ensure that you have made one before proceeding
     %p
-      Otherwise, click <b>more ...</b> and select <b>Worksheets > new</b> in the menu that opens
+      Otherwise, click <b>more ...</b> and select <i class='icon-wrench'></i> <b>new worksheet</b> 
+      from the menu
