--- a/app/views/menus/teacher/_per-ws.html.haml
+++ b/app/views/menus/teacher/_per-ws.html.haml
@@ -1,7 +1,7 @@
 
 %ul.dropdown-menu.dropdown-inverse#per-ws{ :role => :menu }
   %li
-    = simple_link :for => "Download PDF", :id => 'lnk-ws-download', :icon => 'icon-arrow-down',
+    = simple_link :for => "Download PDF", :id => 'lnk-ws-download', :icon => 'icon-download',
     :url => "#{Gutenberg['server']}/atm/:a/:b/downloads/assignment-:c-:b.pdf"
   %li.nav-header= "Publish"
   %li
