--- a/app/assets/stylesheets/bootstrap-overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap-overrides.css.scss
@@ -21,10 +21,12 @@ $green: #347235 ; // rgb(87,188,32)
 
 .subtext { 
   color: $orange ;
-  font-size: 13px ;
+  font-size: 11px ;
   padding: 3px ;
   text-transform: lowercase ;
 }
+
+.white { color: white }
 
 .navbar-inverse, .dropdown-menu {
   li { 
@@ -796,7 +798,7 @@ li.split {
 #m-suggestion-upload {
   li {
    color: white ;
-   font-size: 13px ;
+   font-size: 11px ;
   }
 }
 
