--- a/app/views/tutorials/teacher/upload-scans/_one.html.haml
+++ b/app/views/tutorials/teacher/upload-scans/_one.html.haml
@@ -4,4 +4,25 @@
   %li{ :data => { :id => 'm-teacher-workbench' } }
     %h6= "#1"
     %p
-      Click here and select <b>Upload Scans</b> from the menu. Allow the app <b>Scanbot</b> to download and then install.
+      Click here and select <b>Download Scanbot</b> from the menu to download a 
+      small application onto your computer. For now, this application is available 
+      for <b>Microsoft Windows</b> only
+    %p
+      Once installed, Scanbot will start on boot-up and will continue running 
+      behind the scenes - looking for any new scans, doing all required book-keeping 
+      and automatically sending all detected scans to Gradians.com
+    %p
+      So, assuming you have just collected worksheets from your students, the next few 
+      steps would be as follows
+      %ul
+        %li
+          Take the worksheets and put them in the scanner
+        %li
+          Ask the scanner to start scanning
+        %li
+          Once the scanner finishes scanning, it will ask you where you want to save the scans. 
+          At this time, ask your scanner to save the scans in the <b>special folder</b> Scanbot 
+          creates for you - <b>Gradians.com Lockbox</b>. This folder will be on your <b>desktop</b>
+        %li
+          That's it! 
+
