New tutorial for how to send suggestions

--- a/app/views/layouts/teachers.html.haml
+++ b/app/views/layouts/teachers.html.haml
@@ -45,6 +45,8 @@
       = render :partial => "tutorials/teacher/upload-scans/#{m}"
     - ['one'].each do |m|
       = render :partial => "tutorials/teacher/welcome/#{m}"
+    - ['one'].each do |m|
+      = render :partial => "tutorials/teacher/send-suggestions/#{m}"
 
 !!!5
 
