--- a/app/views/menus/teacher/_howto.html.haml
+++ b/app/views/menus/teacher/_howto.html.haml
@@ -20,6 +20,9 @@
     = simple_link :for => "Add/Edit Study Groups", :id => 'help-mng-sektion',
       :class => 'help-launcher', :launch => 'mng-sektions-milestone-1', :icon => 'icon-edit'
   %li
+    = simple_link :for => "Send Questions to add to database", :id => 'help-suggest-questions',
+      :class => 'help-launcher', :launch => 'suggest-questions-milestone-1', :icon => 'icon-upload'
+  %li
     = simple_link :for => "Send Scans for Grading", :id => 'help-upload-scans',
       :class => 'help-launcher', :launch => 'upload-scans-milestone-1', :icon => 'icon-share'
 -#
