--- a/app/views/modals/teacher/_suggestion.html.haml
+++ b/app/views/modals/teacher/_suggestion.html.haml
@@ -1,5 +1,5 @@
 
-#m-suggestion-upload.modal.fade.slim{ :role => :dialog }
+#m-suggestion-upload.modal.fade.regular{ :role => :dialog }
   .modal-header
     %h2= "Upload File with Suggested Question(s)"
     %iframe.hide{ :name => 'upload-status', :onload => "postUpload()" }
