--- a/app/views/modals/user/_account.html.haml
+++ b/app/views/modals/user/_account.html.haml
@@ -3,9 +3,9 @@
   .modal-body
     = simple_form_for :updated, :remote => true, 
     :defaults => { :label => false }, :url => account_path,
-    :html => { :id => 'f-edit-account', :class => :smart } do |f| 
+    :html => { :id => 'f-edit-account' } do |f| 
       = f.input :email, :hint => "new e-mail"
       = f.input :password, :hint => "new password"
       = f.input :password_confirmation, :hint => "Re-enter password"
-      = f.button :submit, :class => 'btn-primary pull-right', :value => :submit
+      %button.btn.btn-primary.btn-large.pull-right{ :type => :submit }= "Update"
 
