- replaced new Scanbot link

--- a/app/views/menus/teacher/_workbench.html.haml
+++ b/app/views/menus/teacher/_workbench.html.haml
@@ -9,7 +9,7 @@
     = simple_link :for => "Add/Edit Study Groups", :id => 'lnk-mng-sektions', :icon => 'icon-edit'
   %li
     = simple_link :for => 'Download Scanbot (Windows only)', :icon => 'icon-download',
-    :href => "#{server}/winbot/app.publish/winbot.application"
+    :href => "#{server}/Scanbot/Scanbot.application"
     %p.footnote
       You will need this application to send scans to Gradians.com
 -#
