[teacher]: Modified interface for editing a sektion

--- a/app/assets/stylesheets/bootstrap-overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap-overrides.css.scss
@@ -207,13 +207,15 @@ $green: #347235 ; // rgb(87,188,32)
 } 
 
 #lnk-logout{ color: $orange ; }
-#m-account {
+#m-account, #lnk-add-sektion {
   background: $deep-blue ;
   float: right ;
   margin-top: 5px ;
   height: 12px ;
   padding: 13px 15px ; 
   border-radius: 4px ;
+  color: white ; 
+  text-decoration: none ;
 } 
 
 .g-panel { 
