--- a/app/views/teachers/_form-qzb.html.haml
+++ b/app/views/teachers/_form-qzb.html.haml
@@ -4,8 +4,8 @@
 - btn_text = context == :editqz ? "Add Selected" : "Build Quiz"
 
 = simple_form_for :checked, :remote => true, 
-  :html => { :id => "form-#{context}", :class => 'no-remove', 
-  'data-action' => "#{action}", 'data-id' => "#{data_id}" } do |f|
+  :html => { :id => "form-#{context}", :class => 'no-remove',
+  :data => { :action => "#{action}", :id => "#{data_id}" }} do |f|
 
   .row-fluid.navbar.purge-skip
     - if context == :editqz
