Edits to some tutorials

--- a/app/views/layouts/teachers.html.haml
+++ b/app/views/layouts/teachers.html.haml
@@ -40,7 +40,7 @@
       = render :partial => "tutorials/teacher/editqz/#{m}"
     - ['one', 'two'].each do |m|
       = render :partial => "tutorials/teacher/publish-ws/#{m}"
-    - ['one', 'two', 'three', 'four'].each do |m|
+    - ['one', 'two', 'three'].each do |m|
       = render :partial => "tutorials/teacher/mng-sektions/#{m}"
     - ['one'].each do |m|
       = render :partial => "tutorials/teacher/upload-scans/#{m}"
