--- a/app/views/menus/teacher/_howto.html.haml
+++ b/app/views/menus/teacher/_howto.html.haml
@@ -17,8 +17,8 @@
       :class => 'help-launcher', :launch => 'publish-milestone-1',
       :autoclick => 'lnk-existing-quiz', :icon => 'icon-share'
   %li
-    = simple_link :for => "Add/Edit Study Groups", :id => 'help-mng-sektion',
-      :class => 'help-launcher', :launch => 'mng-sektions-milestone-1', :icon => 'icon-edit'
+    = simple_link :for => "Create a new Section", :id => 'help-mng-sektion',
+      :class => 'help-launcher', :launch => 'mng-sektions-milestone-1', :icon => 'icon-plus-sign'
   %li
     = simple_link :for => "Send Questions to add to database", :id => 'help-suggest-questions',
       :class => 'help-launcher', :launch => 'suggest-questions-milestone-1', :icon => 'icon-upload'
