--- a/app/views/tutorials/teacher/mng-sektions/_three.html.haml
+++ b/app/views/tutorials/teacher/mng-sektions/_three.html.haml
@@ -1,11 +1,19 @@
 
 
-%ol.hide{ :id => 'mng-sektions-milestone-3', :data => { :enable => 'm-teacher-workbench', :onwards => :true }}
-  %li{ :data => { :id => 'pane-mng-sektions-2' }} 
+%ol.hide{ :id => 'mng-sektions-milestone-3', :data => { :enable => 'm-teacher-workbench' }}
+  %li{ :data => { :id => 'pane-mng-sektions-1' }} 
     %h6= "#3"
     %p
-      Specify names for upto five(5) sections here. When you are done, click 
-      the <b>Add</b> button below
+      A new section has been created and will be listed here.
+      Also shown is the <b>unique code</b> - written in <b>orange</b> - that is given to each section
     %p
-      Section names can be anything. They can be functional, like <b>11-A</b>, 
-      or descriptive, like <b>Gifted Students</b>. The choice is yours 
+      <b>Give this code to all students you want in this section</b>. Students will log into 
+      their Gradians.com account, enter this code and <b>enroll themselves</b> into this section
+    %p
+      A student can belong to more than one section. She could, for example, belong to a 
+      section called 11-A and another section called Gifted Students 
+    %p
+      The point is that a section is nothing more than a group of students. And you can 
+      group your students in any which way you want
+      
+
