--- a/app/views/tutorials/teacher/mng-sektions/_two.html.haml
+++ b/app/views/tutorials/teacher/mng-sektions/_two.html.haml
@@ -1,13 +1,12 @@
 
 
 %ol.hide{ :id => 'mng-sektions-milestone-2', :data => { :enable => 'm-teacher-workbench', :onwards => :true }}
-  -#%li{ :data => { :id => 'left-8', :options => 'tipLocation:top;nubPosition:bottom' } }
-  %li{ :data => { :id => 'left-8' }} 
+  %li{ :data => { :id => 'lnk-add-sektion', :options => 'tipLocation:top;nubPosition:bottom' }} 
     %h6= "#2"
     %p
-      Your <b>existing sections</b> are listed here. If you have never made a section before,  
-      then you would see the default section we created for you - called Gradians
+      Click this button here
     %p
-      But in this tutorial, the aim is to create an entirely new section
+      A short form will open. <b>Provide a name for the new section</b>. 
+      Then, click the <b>Add</b> button
     %p
-      So, <b>Step 1:</b> click on the <b>Add more ...</b> tab
+      Any name will do. It can be descriptive - like Gifted Students - or purely functional- like 11-A
