--- a/app/views/tutorials/teacher/welcome/_one.html.haml
+++ b/app/views/tutorials/teacher/welcome/_one.html.haml
@@ -4,10 +4,13 @@
     %p
       <b>Hello, and welcome to Gradians.com</b>
     %p
-      You seem to be new to Gradians.com. And so, we just want to let you  
-      know that as you use the site, help is available and it is available here
+      You seem to be new to Gradians.com. And so, we thought we should let you know  
+      that as you use the site, <b>help is available</b> and is available here
     %p
-      As a first step, we would encourage you to <b>Make a Quiz</b>.
-      Its the best way to get familiar with the site
+      As a first step, we would recommend you try making a quiz <tt>(Help > Make a Quiz)</tt>.
+      Its the best way to get familiar with the site 
+    %p
+      We thank you for using Gradians.com. We made it to help teachers and we 
+      hope you will find it useful
     %p
       <b>Abhinav & Akshay</b><br/>Co-founders
