--- a/app/views/tutorials/teacher/qzb/_six.html.haml
+++ b/app/views/tutorials/teacher/qzb/_six.html.haml
@@ -3,7 +3,6 @@
   %li{ :data => { :id => 'form-qzb', :options => "tipLocation:top;nubPosition:bottom" } }
     %h6= "#4"
     %p
-      When you are done picking questions, <b>give the quiz a name</b>. 
-      Any name is a good name as long as it makes sense to you
+      When you are done picking questions, <b>give the quiz a name</b>. Any name is a good name 
     %p
       Then, click the <b>Build Quiz</b> button
