--- a/app/views/tutorials/teacher/wsb/_one.html.haml
+++ b/app/views/tutorials/teacher/wsb/_one.html.haml
@@ -6,7 +6,8 @@
       <b>Select a quiz</b> from the list of quizzes shown here
     %p
       If you see nothing here, then you haven't made a quiz yet. 
-      Please ensure that you have made one before proceeding
+      Please ensure that you have made one before proceeding </br>
+      <i class='icon-eye-open'></i> <tt> Help > Make a Quiz</tt>
     %p
-      Otherwise, click <b>more ...</b> and select <i class='icon-wrench'></i> <b>new worksheet</b> 
+      Otherwise, click <b>more ...</b> and select <i class='icon-plus-sign'></i> <b>new worksheet</b> 
       from the menu
