- corrected a bit of language

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -99,10 +99,12 @@
               assumption - Teacher's know how to teach. All they need are
               the time and the resources to do their job well.
             %p
-              We provide this by automating all the mechanical aspects
-              of grading through use of computer programs combined with
-              crucial bit of imperative human judgement, delivered by one 
-              our caring examiner.  
+              We automate all the mechanical aspects of the evaluation
+              process through use of computer programs and combined this 
+              with that crucial bit of human judgement which is required
+              to complete the process. Thus we save the teacher time, give
+              her actionable data and statistics and provide the student
+              with feedback as needed. 
       
         .span.anka{ :id => "who-we-are" }
         .row-fluid.link-bar-item
